Improved parallelism