@@ -36,6 +36,7 @@ import java.util.Vector;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.Semaphore;
 
 import javax.xml.parsers.ParserConfigurationException;
 
@@ -123,10 +124,10 @@ public class DitaMap2Xliff {
 					}
 				} catch (NumberFormatException e) {
 					// Use default if invalid
-					maxThreads = Runtime.getRuntime().availableProcessors();
+					maxThreads = 16;
 				}
 			} else {
-				maxThreads = Runtime.getRuntime().availableProcessors();
+				maxThreads = 16;
 			}
 			params.put("maxThreads", String.valueOf(maxThreads));
 
@@ -289,12 +290,26 @@ public class DitaMap2Xliff {
 		String maxThreadsParam = params.get("maxThreads");
 		int maxThreads = Integer.parseInt(maxThreadsParam);
 
-		try (ExecutorService executor = Executors.newFixedThreadPool(maxThreads)) {
+		// Use virtual threads with semaphore to limit concurrency
+		Semaphore concurrencyLimit = new Semaphore(maxThreads);
+		try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
 			List<Future<ProcessingResult>> futures = new ArrayList<>();
 
 			for (String file : filesMap) {
 				Future<ProcessingResult> future = executor.submit(() -> {
-					return convertSingleFile(file, params, catalog, skeleton);
+					try {
+						// Acquire permit to limit concurrency
+						concurrencyLimit.acquire();
+						try {
+							return convertSingleFile(file, params, catalog, skeleton);
+						} finally {
+							// Always release permit
+							concurrencyLimit.release();
+						}
+					} catch (InterruptedException ex) {
+						Thread.currentThread().interrupt();
+						return new ProcessingResult("Interrupted: " + ex.getMessage());
+					}
 				});
 				futures.add(future);
 			}
